src/test/compile-fail/view-items-at-top.rs
// xfail-test

extern mod std;

fn f() {
}

use std::net;    //~ ERROR view items must be declared at the top

fn main() {
}

